# forge

./: .gitignore  LICENSE  README.md  modal_app.py  pyproject.toml
benchmarks/: __init__.py  e2e_results.json  mlp_results.json  plot.py  results.csv  run_bench.py  run_e2e.py  run_mlp.py
docs/: benchmarks.md  design.md  mlp-fusion.md  profiling.md
forge/: __init__.py  flash_attn.py  gpt2.py  mlp.py  reference.py  utils.py
profiling/: __init__.py  profile_kernel.py  tuning_results.json
tests/: test_correctness.py
